--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "manifest_version": 2,
-  "name": "Follower Tracker",
+  "manifest_version": 3,
+  "name": "Follcker",
   "version": "1.0",
   "permissions": ["activeTab", "storage", "https://api.github.com/*"],
   "background": {
@@ -9,8 +9,8 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://github.com/*?tab=following*"],
-      "js": ["src/modules/content.js"]
+      "matches": ["https://github.com/*?*tab=following*"],
+      "js": ["src/modules/background.js"]
     }
   ],
   "browser_action": {
