--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
   "content_scripts": [
     {
       "matches": ["https://github.com/*?*tab=following*"],
-      "js": ["src/modules/background.js"]
+      "js": ["src/modules/content.js"]
     }
   ],
   "browser_action": {
